Added room for storing weather data

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,18 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.riteshkumarsingh.weatherapplication.HomeActivity">
+    android:orientation="vertical"
+    tools:context="com.example.riteshkumarsingh.weatherapplication.HomeActivity"
+    >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+  <TextView
+      android:id="@+id/temp_in_c"
+      android:layout_width="wrap_content"
+      android:layout_height="0dp"
+      android:layout_weight="1"
+      android:layout_gravity="center"
+      tools:text="25.0"
+      />
 
-</android.support.constraint.ConstraintLayout>
+  <TextView
+      android:id="@+id/temp_in_f"
+      android:layout_width="wrap_content"
+      android:layout_height="0dp"
+      android:layout_weight="1"
+      android:layout_gravity="center"
+      tools:text="77.0"
+      />
+
+  <TextView
+      android:id="@+id/lat"
+      android:layout_width="wrap_content"
+      android:layout_height="0dp"
+      android:layout_weight="1"
+      android:layout_gravity="center"
+      tools:text="12.98"
+      />
+  <TextView
+      android:id="@+id/lon"
+      android:layout_width="wrap_content"
+      android:layout_height="0dp"
+      android:layout_weight="1"
+      android:layout_gravity="center"
+      tools:text="77.58"
+      />
+  <TextView
+      android:id="@+id/name"
+      android:layout_width="wrap_content"
+      android:layout_height="0dp"
+      android:layout_weight="1"
+      android:layout_gravity="center"
+      tools:text="Bangalore"
+      />
+  <TextView
+      android:id="@+id/region"
+      android:layout_width="wrap_content"
+      android:layout_height="0dp"
+      android:layout_weight="1"
+      android:layout_gravity="center"
+      tools:text="Karnataka"
+      />
+</LinearLayout>
